...
            android:textStyle="bold|italic" />

        <include layout="@layout/content_new_event" />


        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/submit_button"
            android:textColor="@color/backgroundColor"
            android:textSize="24sp"
...
